--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,13 +13,13 @@ layout: default
       <img src="/images/calendar.png" width="20px"/> 
       <time datetime="{{page.date | date: date_to_xmlschema}}" itemprop="datePublished" class="post-meta__date date">{{page.date | date: "%F"}}</time>  
 
-      <span id="busuanzi_container_page_pv"> | 阅读：<span id="busuanzi_value_page_pv"></span>次</span>
+      <span id="busuanzi_container_page_pv"> | The number of visiting：<span id="busuanzi_value_page_pv"></span></span>
     </p>
     </div>
   </header>
 
   {% if site.enableToc %}
-    <h2 class="post-title">目录</h2>
+    <h2 class="post-title">Contents</h2>
     {% include toc.html html=content %}
   {% endif %}
 
