--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -95,7 +95,7 @@
           <!-- 访问统计 -->
           <span id="busuanzi_container_site_pv">
             Total visiting counts
-            <span id="busuanzi_value_site_pv"></span>次
+            <span id="busuanzi_value_site_pv"></span>
           </span>
 
         </div>
