--- a/_includes/new-old.html
+++ b/_includes/new-old.html
@@ -1,5 +1,5 @@
 <section>
-
+<!-- 
             <div class="content-play">
               <p><a href="javascript:void(0)" onclick="dashangToggle()" class="dashang" title="打赏，支持一下">打赏一个呗</a></p>
               <div class="hide_box-play"></div>
@@ -57,18 +57,18 @@
               .shang_payselect .pay_item{display:inline-block;margin-right:140px;float:left;}
               .shang_info-play{clear:both;}
               .shang_info-play p,.shang_info-play a{color:#C3C3C3;text-align:center;font-size:12px;text-decoration:none;line-height:2em;}
-            </style>
+            </style> -->
 
        <ul class="pager">
         {% if page.previous.url %}
         <li class="previous">
-            <a href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.previous.title}}">上一篇：  <span>{{page.previous.title}}</span>
+            <a href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.previous.title}}">Previous：  <span>{{page.previous.title}}</span>
             </a>
         </li>
         {% endif %}
         {% if page.next.url %}
         <li class="next">
-            <a href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title}}">下一篇：  <span>{{page.next.title}}</span>
+            <a href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title}}">Next：  <span>{{page.next.title}}</span>
             </a>
         </li>
         {% endif %}
