--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
       <img src="/images/calendar.png" width="20px"/> 
       <time datetime="{{page.date | date: date_to_xmlschema}}" itemprop="datePublished" class="post-meta__date date">{{page.date | date: "%F"}}</time>  
 
-      <span id="busuanzi_container_page_pv"> | Visiting Number: <span id="busuanzi_value_page_pv"></span></span>
+<!--       <span id="busuanzi_container_page_pv"> | Visiting Number: <span id="busuanzi_value_page_pv"></span></span> -->
     </p>
     </div>
   </header>
